Fixed a consent page issue with a jump to the consent form based on browser. The page now scrolls to the top if the jump occurs.

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -117,3 +117,7 @@ a#scrollUp:hover {
 .intervention .btn {
   margin-top: 10px;
 }
+
+section#eligibility h3.title input, section#contact h3.title input {
+  color: #000;
+}
